[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scenes/Player/Player_Scene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Textures/Bosses/И ЭТО ТОЖЕ БЛЯТЬ НЕ ТРОГАЙ/TV_head1.png" type="Texture" id=2]
[ext_resource path="res://Textures/Bosses/И ЭТО ТОЖЕ БЛЯТЬ НЕ ТРОГАЙ/First Boss Table.png" type="Texture" id=3]
[ext_resource path="res://Textures/Bosses/И ЭТО ТОЖЕ БЛЯТЬ НЕ ТРОГАЙ/TV.png" type="Texture" id=4]
[ext_resource path="res://Textures/Bosses/И ЭТО ТОЖЕ БЛЯТЬ НЕ ТРОГАЙ/TV_BG.png" type="Texture" id=5]
[ext_resource path="res://Textures/Bosses/И ЭТО ТОЖЕ БЛЯТЬ НЕ ТРОГАЙ/Leaflets.png" type="Texture" id=6]
[ext_resource path="res://Textures/Bosses/И ЭТО ТОЖЕ БЛЯТЬ НЕ ТРОГАЙ/LeftWell.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Bosses/Obsesion/ObsesionAll.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Bosses/Obsesion/ObsesionBody.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Bosses/Obsesion/LatersTimer.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Bosses/Obsesion/Attack/HitShelf.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "LatersAnim"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("LatersTimer/Laters:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.000136783, 0.136727, 0.275356, 0.407522, 0.582757, 0.755954, 0.933226 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 4, 5, 6, 7 ]
}

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 22, 27 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 66, 27, 22, 27 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 44, 27, 22, 27 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 22, 27, 22, 27 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 22, 0, 22, 27 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 44, 0, 22, 27 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 66, 0, 22, 27 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 0, 27, 22, 27 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Boss_crunch" type="Node2D"]
position = Vector2( 2.49997, 2.42859 )
script = ExtResource( 8 )

[node name="BossBody" type="AnimationPlayer" parent="."]
script = ExtResource( 9 )

[node name="Node2D" type="Node2D" parent="BossBody"]
position = Vector2( 157.518, 75.6845 )
z_index = -1

[node name="Sprite" type="Sprite" parent="BossBody/Node2D"]
position = Vector2( 345.041, 80.7462 )
scale = Vector2( 3.35572, 3.61003 )
z_index = 1
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Board and Body" type="Sprite" parent="BossBody/Node2D"]
position = Vector2( 333.697, 142.577 )
scale = Vector2( 4.69074, 5.47274 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="BossBody/Node2D/Board and Body"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossBody/Node2D/Board and Body/Area2D"]
position = Vector2( 1.88828, -3.55814 )
scale = Vector2( 0.989, 0.533 )
shape = SubResource( 1 )
disabled = true
one_way_collision_margin = 0.0

[node name="TV" type="Sprite" parent="BossBody/Node2D"]
position = Vector2( 350.396, 44.177 )
scale = Vector2( 4.6812, 4.17036 )
z_index = -1
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite3" type="Sprite" parent="BossBody/Node2D/TV"]
position = Vector2( 0.0619321, -6.30489 )
scale = Vector2( 1.01512, 1.05478 )
z_index = -1
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerScene" parent="." instance=ExtResource( 1 )]
position = Vector2( 501.07, 346.631 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/LatersAnim = SubResource( 2 )

[node name="LeftWell" type="Node2D" parent="."]

[node name="НЕ ТРОГАЙ БЛЯТь, МОЁ" type="Sprite" parent="LeftWell"]
position = Vector2( 49.8118, 381.493 )
scale = Vector2( 7.20877, 6.32933 )
texture = ExtResource( 7 )

[node name="Node2D" parent="LeftWell" instance=ExtResource( 11 )]
position = Vector2( 217.184, 269.968 )

[node name="LatersTimer" type="Timer" parent="."]
wait_time = 3.941
one_shot = true
autostart = true
script = ExtResource( 10 )

[node name="Laters" type="AnimatedSprite" parent="LatersTimer"]
visible = false
position = Vector2( 101.342, 110.795 )
scale = Vector2( 5.17143, 5.13668 )
z_index = -2
frames = SubResource( 11 )

[node name="Laters2" type="AnimatedSprite" parent="LatersTimer"]
visible = false
position = Vector2( 101.342, 110.795 )
scale = Vector2( 5.17143, 5.13668 )
z_index = -2
frames = SubResource( 11 )
frame = 7
[connection signal="area_entered" from="BossBody/Node2D/Board and Body/Area2D" to="BossBody" method="_on_Area2D_area_entered"]
[connection signal="area_shape_entered" from="BossBody/Node2D/Board and Body/Area2D" to="BossBody" method="_on_Area2D_area_shape_entered"]
[connection signal="timeout" from="LatersTimer" to="LatersTimer" method="_on_LatersTimer_timeout"]
[connection signal="animation_finished" from="LatersTimer/Laters" to="LatersTimer" method="_on_Laters_animation_finished"]
[connection signal="animation_finished" from="LatersTimer/Laters2" to="LatersTimer" method="_on_Laters_animation_finished"]
